# sot-talos-balance

./: CMakeLists.txt  package.xml  setup.cfg
include/sot/talos_balance/: delay.hh
src/: CMakeLists.txt  admittance-controller-end-effector-python.hh  ankle-admittance-controller-python.hh  ankle-joint-selector-python.hh  boolean-identity-python.hh  com-admittance-controller-python.hh  coupled-admittance-controller-python.hh  dcm-com-controller-python.hh  dcm-controller-python.hh  dcm-estimator-python.hh  delay-python.hh  delay.cpp  distribute-wrench-python.hh  dummy-dcm-estimator-python.hh  dummy-walking-pattern-generator-python.hh  euler-to-quat-python.hh  example-python.hh  foot-force-difference-controller-python.hh  ft-calibration-python.hh  ft-wrist-calibration-python.hh  hip-flexibility-compensation-python.hh  int-identity-python.hh  joint-position-controller-python.hh  nd-trajectory-generator-python.hh  pose-quaternion-to-matrix-homo-python.hh  qualisys-client-python.hh  quat-to-euler-python.hh  round-double-to-int-python.hh  saturation-python.hh  simple-admittance-controller-python.hh  simple-controller-6d-python.hh  simple-distribute-wrench-python.hh  simple-pid-python.hh  simple-pidd-python.hh  simple-reference-frame-python.hh  simple-state-integrator-python.hh  simple-zmp-estimator-python.hh  sot_talos_balance  state-transformation-python.hh  talos-base-estimator-python.hh  (+2 more)
src/dynamic_graph/sot_talos_balance/: create_entities_utils.py  extract_torque_motorenc_joint_enc_batteries.py
src/dynamic_graph/sot_talos_balance/talos/: parameter_server_conf.py
src/dynamic_graph/sot_talos_balance/test/: appli_COMTraj.py  appli_admittance_end_effector.py  appli_admittance_single_joint.py  appli_admittance_single_joint_velocity_based.py  appli_ankle_admittance.py  appli_base_estimator.py  appli_base_estimator_integrator.py  appli_coupled_ankle_admittance.py  appli_dcmAnkleControl.py  appli_dcmComControl.py  appli_dcmComZmpControl.py  appli_dcmCopControl.py  appli_dcmCoupledAndSingleAnkleControl.py  appli_dcmCoupledAnkleControl.py  appli_dcmSingleAnkleControl.py  appli_dcmSingleCopControl.py  appli_dcmZmpControl.py  appli_dcmZmpControl_distribute.py  appli_dcmZmpControl_estimator.py  appli_dcmZmpControl_feedback.py  appli_dcmZmpControl_file.py  appli_dcmZmpCopControl.py  appli_dcmZmpFootControl.py  appli_dcmZmpWaistControl.py  appli_dcm_estimator.py  appli_dcm_zmp_control.py  appli_dcm_zmp_control_distribute.py  appli_dcm_zmp_control_ffdc.py  appli_dcm_zmp_control_ffdc_fp.py  appli_dcm_zmp_control_flex.py  appli_dcm_zmp_control_flex_openloop.py  appli_dcm_zmp_control_integrator.py  appli_feet_admittance.py  appli_ffSubscriber.py  appli_hip_flexibility_compensation.py  appli_joystick_dcmZmpControl.py  appli_kinematics.py  appli_no_admittance.py  appli_simple_ankle_admittance.py  appli_waistControl.py  (+48 more)
src/dynamic_graph/sot_talos_balance/utils/: filter_utils.py  plot_utils.py  run_test_utils.py
tests/: CMakeLists.txt  test_distribute.cpp
tests/python/: CMakeLists.txt  test_ankle_joint_selector.py  test_base_estimator.py  test_com_admittance.py  test_com_estimation.py  test_control.py  test_ctrl_manager.py  test_dcm_controller.py  test_dcm_controller_talos.py  test_dcm_distribute.py  test_dcm_estimator.py  test_distribute.py  test_dummy_dcm_estimator.py  test_dummy_wpgen.py  test_eulerquat.py  test_example.py  test_foot_force_difference_controller.py  test_ft_calibration.py  test_round_double_to_int.py  test_saturation.py  test_simple_admittance.py  test_simple_distribute.py  test_simple_state_integrator.py  test_simple_zmp_estimator.py  test_state_transformation.py
unittest/python/: test_com_estimation.py  test_dcm_controller_talos.py  test_dcm_distribute.py  test_dcm_estimator.py  test_dummy_wpgen.py  test_ft_calibration.py  test_simple_zmp_estimator.py
utils/: plot_data.py
